# RGCCTranslationUnit

./: .Rbuildignore  Bugs.html  Changes  DESCRIPTION  FAQ.html  FAQ.xml  Features.html  GNUmakefile  MakeRules  NAMESPACE  NAMESPACE.in  Notes.xml  Problems  Todo  Todo.xml  config.status  configure  configure.in  cpp.R  getDoc.R  issues.xml  time.R
R/: BuiltinTypeTable.R  ConfigVars.R  ConfigVars.R.in  FunctionPointers.R  S4dispatch.R  TUParser.R  accessors.R  addToNamespace.R  array.R  asString.R  bindings.R  callGraph.R  classes.R  codeObjects.R  coerce.R  constants.R  convertRValue.R  convertValueToR.R  cppParser.R  defines.R  derivedClass.R  doc.R  dynamicCast.R  enums.R  findDecl.R  findFF.R  findLength.R  freeVariables.R  generate.R  generics.R  getClassNodes.R  getElements.R  getNativeDeclaration.R  getNext.R  getNodeName.R  getRTypeName.R  getValue.R  globalInfo.R  globalVars.R  includeGraph.R  (+29 more)
Web/: GNUmakefile  config.status  index.html  index.html.in
data/: BuiltinTypeTable.csv
examples/: FF.R  GNUmakefile  defines.c  enum.c  enum.h  gccTU.R  getrusage.cc.t00.tu  ggobiTypes.c  ggobiTypes.notes  gtk.c.tu  gtkRoutineNames  myClass.cc  myClass.cc.tu  myClass.h  outargs.c  outargs.h  rusage.c.tu  struct.c.tu  struct.notes  templates.cpp  typedefEnum.c  var.c  wx.R  wxGrid.cpp  wxHTML.cpp  wxWidgets.cpp
inst/Example/: GNUmakefile  Makevars  Sexamples.c  array.c  basic.c  bob.c  curl.c  examples.c  examples.h  foo.c  forward.c  funPtr.c  funcpinter.c  globalRef.c  globalRef.h  phast.c  routine.c  stat.c  svm_light.c  testExample.S
inst/GCC-TranslationUnit-1.00/: TranslationUnit.pm
inst/TUParser/: GNUmakefile
inst/cpp/: GNUmakefile  cpp.c
inst/doc/: C++Parser.xml  GNUmakefile  MethodDispatch.xml  Rdispatch.cc  ast.bib  classes.R  classes.cc  codeFlow.graffle  codeGeneration.tex  constants.xml  cookbook.xml  derivedClasses.xml  dispatch.R  dispatch.cc  dispatch.h  intro.xml  libxml.xml  mappings.xml  outargs.xml  overview.tex  overview.xml  paperOutline  parser.xml  phast.xml  registration.xml  simpleStrategy.xml  svm_light.xml  tu.html  tuRules.tex  wx.xml
inst/examples/: ABC-gen.cpp  ABC-tu.R  ABC.R  ABC.cpp.tu  FFF.cpp  GNUmakefile  Makefile.rules  Makevars  Notes  RmyClass.cpp  RmyClassB.cpp  Rshapes.R  Rshapes.cc  abstract.cc  arima.c.t00.tu  array.c  array.c.t00.tu  attributes.c  bitOr.cpp  const.c  (+57 more)
lib/: CTypes.pm  SCInterface.pm  TranslationUnit.pm
man/: CRoutineDefinition-class.Rd  CRoutineDefinition.Rd  DefinitionContainer.Rd  DerivedClassCode.Rd  GCCNodeClasses.Rd  Parser-class.Rd  RC++Reference-class.Rd  RCode.Rd  TypeDefinition-class.Rd  as.field.decl.Rd  boolType-class.Rd  computeGlobalConstants.Rd  computeGlobalEnumConstants.Rd  convertRValue.Rd  createClassBindings.Rd  createDerivedClass.Rd  createInterface.Rd  createMethodBinding.Rd  createProxyRCall.Rd  freeVariables.Rd  gatherRegistrationInfo.Rd  generateInterface.Rd  generateStructInterface.Rd  getAllDeclarations.Rd  getBaseClasses.Rd  getCallGraph.Rd  getClassMethods.Rd  getCppDefines.Rd  getDataStructures.Rd  getDefines.Rd  getExportNames.Rd  getFields.Rd  getInOutArgs.Rd  getNativeDeclaration.Rd  getNodeByType.Rd  getNodeSource.Rd  getRClassDefinitions.Rd  getRTypeName.Rd  getValue.Rd  getVariables.Rd  (+8 more)
scripts/: NodeIterator.pl  eg.pl  enums.pl  funcs.pl  getFuncNames.pl  globals.pl  registration.pl  scode.pl  typedef.pl  types.pl  varUse.pl  variables.pl
src/: Makevars  Makevars.in  NodeAccessors.cc  NodeClasses.cc  PerlConverters.c  RUtils.c  RUtils.h  TUParser.cc  Todo.xml  classes.cc  parser.cc
tests/: Rdefaults.R  color.R  derived.R  methods.R  methods.xml  override_virtual.cc  test.R  typeContainer.R  wx.R
(+179 files in other folders)
